# cmake-sdl2-project

CMakeProgram02/: CMakeLists.txt
CMakeProgram02/include/: game.hpp  gameObject.hpp  graphics.hpp  math.hpp
CMakeProgram02/src/: game.cpp  graphics.cpp  main.cpp  math.cpp
